--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "bugs": {
     "url": "https://github.com/ShacharWeis/ShacharWeis.github.io/issues"
   },
-  "homepage": "https://github.com/ShacharWeis/ShacharWeis.github.io#readme"
+  "homepage": "https://github.com/ShacharWeis/ShacharWeis.github.io#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  }
 }
