--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,6 @@
         "sendgrid/sendgrid": "^5.5"
     },
     "config": {
-      "vendor-dir": "public/vendor"
+      "vendor-dir": "public/app/vendor"
     }
 }
