--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "packet39",
   "version": "1.0.0",
   "description": "Website for Packet39",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,7 +15,17 @@
     "url": "https://github.com/ShacharWeis/ShacharWeis.github.io/issues"
   },
   "homepage": "https://github.com/ShacharWeis/ShacharWeis.github.io#readme",
+  "engines": {
+    "node": ">=8.1.0",
+    "npm": ">=5.0.0"
+  },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
     "gulp": "^3.9.1"
+  },
+  "dependencies": {
+
   }
 }
