--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
-    "gulp": "^3.9.1"
+    "eslint-plugin-compat": "^1.0.3",
+    "gulp": "^3.9.1",
+    "require-dir": "^0.3.2",
+    "run-sequence": "^1.2.2"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {},
+  "browserslist": [
+    "> 2%",
+    "last 2 versions"
+  ]
 }
