--- a/package.json
+++ b/package.json
@@ -20,14 +20,28 @@
     "npm": ">=5.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "autoprefixer": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.19.0",
-    "eslint-plugin-compat": "^1.0.3",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "cssnano": "^3.10.0",
+    "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
-    "js-yaml": "^3.8.4",
-    "require-dir": "^0.3.2",
-    "run-sequence": "^1.2.2"
+    "gulp-imagemin": "^3.3.0",
+    "gulp-insert": "^0.5.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-nunjucks-render": "^2.2.1",
+    "gulp-postcss": "^7.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sass-glob": "1.0.8",
+    "gulp-uglify": "^3.0.0",
+    "mkdirp": "^0.5.1",
+    "node-notifier": "^5.1.2",
+    "postcss-flexibility": "^2.0.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {},
   "browserslist": [
