--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "eslint": "^4.0.0",
     "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-newer": "^1.3.0",
+    "gulp-nunjucks-render": "^2.2.1",
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
