--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "smooth-scroll": "^11.1.0",
+    "whatwg-fetch": "^2.0.3"
+  },
   "browserslist": {
     "production": [
       "> 2%",
