A bit more tweaking to the ignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ sass_cache
 npm-debug.log
 
 /public/assets
-/public/*.php
+/public/**/*.php
 !/public/app/*.php
-/public/*.html
+/public/**/*.html
 /public/app/vendor
