--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.23.2",
     "browserify": "^14.4.0",
     "cross-env": "^5.0.1",
     "cssnano": "^3.10.0",
