--- a/public/.htaccess
+++ b/public/.htaccess
@@ -27,5 +27,5 @@ RewriteRule ^(.*)$ $1.php
 </IfModule>
 
 <IfModule mod_headers.c>
-Header set Content-Security-Policy "default-src 'self' ; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: http://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https: http://fonts.googleapis.com; img-src 'self' https: data: http://i.imgur.com; font-src 'self' https: http://fonts.gstatic.com; connect-src 'self' https://ipinfo.io https://6cx8vyk5ag.execute-api.us-west-2.amazonaws.com wss://s-usc1c-nss-222.firebaseio.com wss://slackchatv1.firebaseio.com; media-src 'self'; object-src 'self'; child-src 'self' https:; frame-ancestors 'self'; form-action 'self';"
+Header set Content-Security-Policy "default-src 'self' ; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: http://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https: http://fonts.googleapis.com; img-src 'self' https: data: http://i.imgur.com http://*.gravatar.com; font-src 'self' data: https: http://fonts.gstatic.com; connect-src 'self' https://ipinfo.io https://6cx8vyk5ag.execute-api.us-west-2.amazonaws.com wss://s-usc1c-nss-222.firebaseio.com wss://slackchatv1.firebaseio.com; media-src 'self'; object-src 'self'; child-src 'self' https:; frame-ancestors 'self'; form-action 'self';"
 </IfModule>
