--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php-http/message": "^1.6",
         "johnpbloch/wordpress": "^4.9",
         "wpackagist-plugin/wordpress-seo": "^6.3",
-        "wpackagist-plugin/wordpress-importer": "^0.6.3"
+        "wpackagist-plugin/wordpress-importer": "^0.6.3",
+        "wpackagist-plugin/jetpack": "^5.8"
     },
     "config": {
       "vendor-dir": "public/vendor"
