Adding in comments and installing spam protection for comments

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "johnpbloch/wordpress": "^4.9",
         "wpackagist-plugin/wordpress-seo": "^6.3",
         "wpackagist-plugin/wordpress-importer": "^0.6.3",
-        "wpackagist-plugin/jetpack": "^5.8"
+        "wpackagist-plugin/jetpack": "^5.8",
+        "wpackagist-plugin/akismet": "^4.0"
     },
     "config": {
       "vendor-dir": "public/vendor"
