--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,6 @@
+CheckSpelling on
+CheckCaseOnly on
+
 <IfModule mod_setenvif.c>
 SetEnvIf X-Forwarded-Proto "^https$" HTTPS
 </IfModule>
@@ -41,7 +44,7 @@ RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
 RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
+RewriteRule ^(.*)$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R=301]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
